Added ability to view remote files. Impl is currently very lazy and only works for one local folder.